<resources>
    <string name="app_name">Food Market</string>
    <string name="phone_number_example">Phone number (79123456789)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_in_food_market">New in Food Market?</string>
    <string name="sign_up_here">Sign up here!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="food_market_logo">Food Market Logo</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_example_mail_com">Email (example@mail.com)</string>
</resources>