<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item"
        android:orderInCategory="1"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="@string/menu" />
    <item
        android:id="@+id/search_item"
        android:orderInCategory="2"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/cart_item"
        android:orderInCategory="4"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart" />
    <item
        android:id="@+id/history_item"
        android:orderInCategory="3"
        android:icon="@drawable/ic_baseline_newspaper_24"
        android:title="@string/history" />
</menu>